force-app/main/default/objects/Billing_Group_Opp_Product__c.object
<CustomObject>
    <description>Junction object to support a many-to-many relationship between Opportunity Products and Billing Groups.</description>
    <fields>
        <fullName>Billing_Group__c</fullName>
        <label>Group Name</label>
        <referenceTo>Billing_Group__c</referenceTo>
        <relationshipLabel>Billing Group Opp Products</relationshipLabel>
        <relationshipName>Billing_Group_Opp_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Domestic_Partnership_Allowed__c</fullName>
        <formula>TEXT (  Billing_Group__r.Domestic_Partnership_Allowed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domestic Partnership Allowed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Group_Number__c</fullName>
        <formula>Billing_Group__r.Full_Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_ID__c</fullName>
        <description>Created as Text field because it is not possible to do a lookup to Opportunity Product.</description>
        <label>Opportunity Product ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Billing Groups</relationshipLabel>
        <relationshipName>Billing_Group_Opp_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Req_Agent_Code__c</fullName>
        <formula>Billing_Group__r.Requested_Agent_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Req. Agent Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_Rating_Class__c</fullName>
        <formula>TEXT ( Billing_Group__r.Requested_Rating_Class__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Req. Rating Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retro_Cancellation_Allowance__c</fullName>
        <formula>TEXT (  Billing_Group__r.Retro_Cancellation_Allowance__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retro Cancellation Allowance</label>
        <type>Text</type>
    </fields>
    <label>Billing Group Opp Product</label>
    <nameField>
        <displayFormat>BGOP-{00000}</displayFormat>
        <label>Billing Group Opp Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Group Opp Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>